implemented single-threaded sobel operation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,16 @@ include_directories(src)
 
 add_executable(Main
         src/netpbm.c
-        src/netpbm.h)
+        src/netpbm.h
+        src/sobel.c
+        src/sobel.h)
 
 add_executable(Test
         src/netpbm.c
-        src/netpbm.h tests/netpbm_test.c)
+        src/netpbm.h
+        src/sobel.c
+        src/sobel.h
+        tests/netpbm_test.c)
+
+target_link_libraries(Test m)
+target_link_libraries(Main m)
